# sapper

./: BUILD.bazel  index.bzl  package.json  rollup.bazel-config.js  tsconfig.build.json  tsconfig.nostrict.json
internal/: copy_file.bzl  copy_typing.bzl  copy_typing.js  forest_layout.bzl  js_library.bzl  rollup.config.js  rollup_bundle.bzl  sapper.bzl  sapper_route.bzl  tree_artifact.bzl
plugin/rollup-sapper/: BUILD.bazel  chunk.ts  code.ts  graph.ts  index.ts  inject.ts  interfaces.ts  resources.ts  summarize.ts
runtime/src/app/: app.ts  index.ts  rollup.config.js
runtime/src/app/prefetch/: index.ts
runtime/src/app/start/: index.ts
runtime/src/app/stores/: index.ts
runtime/src/internal/: App.svelte.d.ts  manifest-client.d.ts  manifest-server.d.ts  shared.d.ts
runtime/src/server/: index.ts  mime-lite.d.ts  rollup.config.js  sirv.d.ts
runtime/src/server/assets/: get_assets_handler.ts  index.ts
runtime/src/server/middleware/: get_dev_handler.ts  get_page_handler.ts  get_server_route_handler.ts  index.ts
src/: api.ts  cli.ts  core.ts  interfaces.ts  rollup.ts
src/api/: build.ts  codegen.ts  dev.ts  export.ts  find_page.ts
src/api/utils/: Deferred.ts  copy_runtime.ts  export_queue.ts  validate_bundler.ts
src/core/: create_app.ts  create_manifest_data.ts  sapper-dev-client.js
src/core/create_compilers/: RollupCompiler.ts  RollupResult.ts  WebpackCompiler.ts  WebpackResult.ts  extract_css.ts  index.ts  interfaces.ts
src/rollup/: dedupe.ts  interfaces.ts
src/rollup/client/: chunk.ts  code.ts  discover.ts  graph.ts  index.ts  resources.ts  summarize.ts
src/rollup/codegen/: index.ts
src/rollup/deploy/: index.ts
src/rollup/server/: index.ts  inject.ts  load-config.ts  nollup.d.ts  walk.ts
types/webpack-format-messages/: index.d.ts
