load("@npm//@bazel/rollup:index.bzl", "rollup_bundle")
load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary", "pkg_npm")

ts_library(
  name = "runtime/internal",
  tsconfig = ":tsconfig.build.json",
  module_name = "@sapper/internal",
  module_root = "runtime/src/internal",
  generate_externs = False,
  srcs = [
    "runtime/src/internal/App.svelte.d.ts",
    "runtime/src/internal/shared.d.ts",
    "runtime/src/internal/manifest-server.d.ts",
    "runtime/src/internal/manifest-client.d.ts",
  ]
)

ts_library(
  name = "runtime/server_lib",
  module_name = "@sapper/server",
  module_root = "runtime/src/server/index.d.ts",
  tsconfig = ":tsconfig.build.json",
  generate_externs = False,

  deps = [
    "@npm//@types/node",
    "@npm//@types/cookie",
    "@npm//svelte",
    "@npm//devalue",
    "@npm//@types/node-fetch",
    "@npm//node-fetch",
    "@npm//mime",
    "@npm//cookie",
    "@npm//tslib",
    "@npm//sirv",

    ":runtime/internal",
  ],

  srcs = glob([
    "runtime/src/server/**/*.ts",
  ]),
)

rollup_bundle(
  name = "runtime/server.mjs",
  entry_point = "runtime/src/server/index.ts",
  config_file = "runtime/src/server/rollup.config.js",
  format = "esm",
  deps = [
    ":runtime/server_lib",
    "@npm//rollup-plugin-node-resolve",
    "@npm//rollup-plugin-commonjs",
    "@npm//rollup-plugin-sucrase",
  ],
)

ts_library(
  name = "runtime/app_lib",
  tsconfig = ":tsconfig.build.json",
  module_name = "@sapper/app",
  module_root = "runtime/src/app/index.d.ts",
  generate_externs = False,

  deps = [
    "@npm//svelte",
    "@npm//tslib",

    ":runtime/internal",
    ":utils_lib",
  ],

  srcs = glob([
    "runtime/src/app/**/*.ts",
  ]),
)

rollup_bundle(
  name = "runtime/app.mjs",
  entry_point = "runtime/src/app/index.ts",
  config_file = "runtime/src/app/rollup.config.js",
  format = "esm",
  deps = [
    ":runtime/app_lib",
    "@npm//rollup-plugin-node-resolve",
    "@npm//rollup-plugin-commonjs",
    "@npm//rollup-plugin-sucrase",
  ],
)

filegroup(
  name = "runtime_bundles",
  srcs = [
    ":runtime/app.mjs",
    ":runtime/server.mjs",
  ] + glob([
    "runtime/internal/**/*",
  ]),
)

ts_library(
  name = "runtime",
  generate_externs = False,
  srcs = [
    ":runtime_types",
  ],
  visibility = ["//visibility:public"],
)

filegroup(
  name = "runtime_types",
  srcs = [
    ":runtime/server_lib",
    ":runtime/app_lib",
    ":runtime/internal",
  ]
)

ts_library(
  name = "interfaces_lib",
  module_name = "sapper/interfaces",
  module_root = "src/interfaces.d.ts",
  tsconfig = ":tsconfig.build.json",
  generate_externs = False,

  deps = [
    "@npm//@types/node",
    "@npm//tslib",
  ],

  srcs = glob([
    "src/interfaces.ts",
  ]),
)

ts_library(
  name = "utils_lib",
  module_name = "sapper/utils",
  module_root = "src/utils.d.ts",
  tsconfig = ":tsconfig.build.json",
  generate_externs = False,

  deps = [
    "@npm//@types/node",
    "@npm//tslib",
  ],

  srcs = glob([
    "src/utils.ts",
  ]),
)

ts_library(
  name = "core_lib",
  module_name = 'sapper/core',
  module_root = 'src/core.d.ts',

  visibility = ["//visibility:public"],
  tsconfig = ":tsconfig.build.json",
  generate_externs = False,

  deps = [
    ":interfaces_lib",
    ":utils_lib",
    ":config",
    "@npm//@types/node",
    "@npm//@types/require-relative",
    "@npm//@types/string-hash",
    "@npm//@types/webpack",
    "@npm//webpack",
    "@npm//string-hash",
    "@npm//sourcemap-codec",
    "@npm//kleur",
    "@npm//pretty-bytes",
    "@npm//rollup",
    "@npm//require-relative",
    "@npm//webpack-format-messages",
    "@npm//svelte",
  ],

  srcs = glob([
    "src/core.ts",
    "src/core/**/*.ts",
  ]),
)

ts_library(
  name = "api_lib",
  module_name = 'sapper/api',
  module_root = 'src/api.d.ts',

  visibility = ["//visibility:public"],
  tsconfig = ":tsconfig.nostrict.json",
  generate_externs = False,

  data = [
    "runtime_bundles",
  ],

  deps = [
    ":interfaces_lib",
    ":utils_lib",
    ":core_lib",
    ":config",
    "@npm//@types/node",
    "@npm//@types/node-fetch",
    "@npm//@types/html-minifier",
    "@npm//@types/http-link-header",
    "@npm//node-fetch",
    "@npm//html-minifier",
    "@npm//http-link-header",
    "@npm//cheap-watch",
    "@npm//port-authority",
    "@npm//shimport",
    "@npm//svelte",
  ],

  srcs = glob([
    "src/api/**/*.ts",
    "src/api.ts",
  ]),
)

ts_library(
  name = "cli",
  tsconfig = ":tsconfig.build.json",
  generate_externs = False,

  deps = [
    ":api_lib",
    ":interfaces_lib",
    "@npm//@types/node",
    "@npm//@types/sade",
    "@npm//kleur",
    "@npm//sade",
  ],

  srcs = [
    "src/cli.ts",
  ],

  visibility = ["//visibility:public"],
)

exports_files([
  "src/cli.ts",
  "internal/rollup.config.js",
  "internal/package.json",
])

nodejs_binary(
  name = "internal/copy_typing_bin",
  entry_point = "internal/copy_typing.js",
  visibility = ["//visibility:public"],
)


ts_library(
  name = "config",
  tsconfig = ":tsconfig.build.json",
  generate_externs = False,
  deps = [
    "@npm//@types/node",
    "@npm//rollup",
  ],
  srcs = glob([
    "src/config/*.ts"
  ]),

  visibility = ["//visibility:public"],
)

nodejs_binary(
  name = "sapper_cli",
  entry_point = ":src/cli.ts",
  data = [
    ":cli",
    ":config",

    # "package.json",
  ],
  visibility = ["//visibility:public"],
)

ts_library(
  name = "rollup_lib",
  module_name = 'sapper/rollup',
  module_root = 'src/rollup.d.ts',
  srcs = glob([
    "src/rollup/**/*.ts",
    "src/rollup.ts",
  ]),
  deps = [
    ":api_lib",
    ":core_lib",
    ":interfaces_lib",

    # "@npm//shimport",
    "@npm//nollup",
    "@npm//acorn-walk",
    "@npm//@types/node",
    "@npm//rollup",
    "@npm//sourcemap-codec",
    "@npm//kleur",
    "@npm//pretty-bytes",
    "@npm//svelte",
  ],

  visibility = ["//visibility:public"],
)

rollup_bundle(
  name = "core",
  config_file = "rollup.bazel-config.js",
  entry_points = {
    "src/core.ts": "index",
  },
  output_dir = True,
  srcs = [
    ":package.json",
  ],
  format = "cjs",
  deps = [
    "@npm//@rollup/plugin-node-resolve",
    "@npm//@rollup/plugin-commonjs",
    "@npm//@rollup/plugin-json",
    ":core_lib",
  ],
)

rollup_bundle(
  name = "api",
  config_file = "rollup.bazel-config.js",
  entry_points = {
    "src/api.ts": "index",
  },
  output_dir = True,
  srcs = [
    ":package.json",
  ],
  format = "cjs",
  deps = [
    "@npm//@rollup/plugin-node-resolve",
    "@npm//@rollup/plugin-commonjs",
    "@npm//@rollup/plugin-json",
    ":api_lib",
  ],
)

rollup_bundle(
  name = "rollup",
  config_file = "rollup.bazel-config.js",
  entry_points = {
    "src/rollup.ts": "index",
  },
  output_dir = True,
  srcs = [
    ":package.json",
  ],
  format = "cjs",
  deps = [
    "@npm//mime",
    "@npm//@rollup/plugin-node-resolve",
    "@npm//@rollup/plugin-commonjs",
    "@npm//@rollup/plugin-json",
    ":rollup_lib",
  ],
)

pkg_npm(
  name = "sapper_pkg",
  package_name = "sapper",
  deps = [
    ":api",
    ":core",
    ":rollup",

    "runtime_bundles",
    # ":runtime/server.mjs",
    # ":runtime/app.mjs",
  ],
  visibility = ["//visibility:public"],
)
