load("@npm//@bazel/typescript:index.bzl", "ts_library")

ts_library(
  name = "rollup-sapper",
  module_name = 'rollup-sapper',
  srcs = glob([
    "**/*.ts",
  ]),
  deps = [
    "@npm//shimport",
    "@npm//@types/node",
    "@npm//@types/string-hash",
    "@npm//rollup",
    "@npm//string-hash",
    "@npm//sourcemap-codec",
    "@npm//kleur",
    "@npm//pretty-bytes",
  ],
  visibility = ["//visibility:public"],
)

filegroup(
  name = "rollup-sapper-es5",
  srcs = [":rollup-sapper"],
  output_group = "es5_sources",
  visibility = ["//visibility:public"],
)
